[package]
name = "clock-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1.5"
time = "0.1"
caps = "0.5.3"
nix = "0.24.2"
termios = "0.3"
rustyline = "9.1.0"
ansi_term = "0.12"
crossterm = "0.23"
sha256 = "1.0.3"
